<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">


    <EditText
        android:id="@+id/et_operator_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/et_operator_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />


    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ADD" />


     <Button
        android:id="@+id/btn_subtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Subtract" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DIV" />

    <Button
        android:id="@+id/btn_mul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mul" />

    <Button
        android:id="@+id/btn_pow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="POW" />

    <Button
        android:id="@+id/btn_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ROOT" />

    <Button
        android:id="@+id/btn_reverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reverse" />

</LinearLayout>